[gd_scene load_steps=3 format=2]

[ext_resource path="res://content/gui/menus/AuthenticationOverlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="AutheticationOverlay" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
color = Color( 0.258824, 0.258824, 0.258824, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 256
alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 453.0
margin_right = 728.0
margin_bottom = 487.0
custom_fonts/font = ExtResource( 4 )
text = "Please take a picture of your face."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 743.0
margin_right = 728.0
margin_bottom = 871.0
custom_constants/separation = 128
alignment = 1

[node name="TakeImageButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 301.0
margin_bottom = 128.0
rect_min_size = Vector2( 258, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Take Image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 429.0
margin_right = 685.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/TakeImageButton" to="." method="_on_TakeImageButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
